# interbotix_ros_manipulators

interbotix_ros_xsarms/install/: interbotix.repos
interbotix_ros_xsarms/interbotix_xsarm_control/: package.xml
interbotix_ros_xsarms/interbotix_xsarm_control/config/: modes.yaml  rx201.yaml
interbotix_ros_xsarms/interbotix_xsarm_control/launch/: xsarm_control.launch.py
interbotix_ros_xsarms/interbotix_xsarm_descriptions/: CMakeLists.txt  package.xml
interbotix_ros_xsarms/interbotix_xsarm_descriptions/launch/: remote_view.launch.py  xsarm_description.launch.py
interbotix_ros_xsarms/interbotix_xsarm_descriptions/meshes/rx201_meshes/: rx201_1_base.stl  rx201_2_shoulder.stl  (+4 more)
interbotix_ros_xsarms/interbotix_xsarm_descriptions/rviz/: moveit.rviz  xsarm_description.rviz
interbotix_ros_xsarms/interbotix_xsarm_descriptions/urdf/: rx200.urdf.xacro  rx201.urdf.xacro
interbotix_ros_xsarms/interbotix_xsarm_moveit/: CMakeLists.txt  package.xml
interbotix_ros_xsarms/interbotix_xsarm_moveit/config/controllers/: 5dof_controllers.yaml
interbotix_ros_xsarms/interbotix_xsarm_moveit/config/srdf/: rx200.srdf.xacro  rx201.srdf.xacro
interbotix_ros_xsarms/interbotix_xsarm_moveit/launch/: interface.launch.py  move_group.launch.py  moveit.rviz
interbotix_ros_xsarms/interbotix_xsarm_moveit/src/: moveit_client.cpp
interbotix_ros_xsarms/interbotix_xsarm_ros_control/: CMakeLists.txt
interbotix_ros_xsarms/interbotix_xsarm_ros_control/config/: 5dof_controllers.yaml  ros2_config.yaml
interbotix_ros_xsarms/interbotix_xsarm_ros_control/launch/: xsarm_ros_control.launch.py
